--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div class="icon-glow"></div>
                 </div>
                 <h1 class="header-title">Smart Study Classes</h1>
-                <h2 class="header-subtitle">Premium Toppers Leaderboard</h2>
+                <h2 class="header-subtitle">Toppers Leaderboard</h2>
                 <p class="header-description">Upload Excel file to generate beautiful premium leaderboard</p>
             </div>
         </header>
@@ -80,7 +80,7 @@
                     <div class="spinner-ring"></div>
                     <div class="spinner-ring"></div>
                 </div>
-                <p class="loading-text">Processing your premium file...</p>
+                <p class="loading-text">Processing your file...</p>
             </div>
         </div>
 
@@ -113,8 +113,8 @@
             <!-- Top 3 Premium Podium -->
             <div class="podium-container">
                 <div class="podium-title">
-                    <h2 class="podium-header">🏆 Premium Top Performers 🏆</h2>
-                    <p class="podium-subtitle">Excellence Recognized</p>
+                    <h2 class="podium-header">Smart Study Classes</h2>
+                    <p class="podium-subtitle">Top Performers</p>
                 </div>
                 <div class="podium glass-morphism" id="podium">
                     <!-- Podium positions will be populated by JavaScript -->
