added white theme

--- a/index.html
+++ b/index.html
@@ -12,13 +12,6 @@
 </head>
 <body>
     <div class="app-container">
-        <!-- Premium Background Effects -->
-        <div class="bg-effects">
-            <div class="bg-gradient-1"></div>
-            <div class="bg-gradient-2"></div>
-            <div class="bg-gradient-3"></div>
-        </div>
-
         <!-- Header -->
         <header class="header">
             <div class="header-content">
@@ -26,9 +19,9 @@
                     <i class="fas fa-trophy header-icon"></i>
                     <div class="icon-glow"></div>
                 </div>
-                <h1 class="header-title">Smart Study Classes</h1>
-                <h2 class="header-subtitle">Toppers Leaderboard</h2>
-                <p class="header-description">Upload Excel file to generate beautiful premium leaderboard</p>
+                <h1 class="header-title">SMART STUDY CLASSES</h1>
+                <h2 class="header-subtitle">Student Leaderboard</h2>
+                <p class="header-description">Upload Excel file to generate beautiful leaderboard</p>
             </div>
         </header>
 
@@ -36,10 +29,10 @@
         <section class="template-section">
             <div class="template-container">
                 <h3 class="template-title">📊 Excel Template</h3>
-                <p class="template-description">Download our premium template for consistent data formatting</p>
+                <p class="template-description">Download template with updated column structure</p>
                 <button class="btn btn--premium template-download-btn" id="templateDownloadBtn">
                     <i class="fas fa-download"></i>
-                    <span>Download Premium Template</span>
+                    <span>Download Template</span>
                     <div class="btn-shine"></div>
                 </button>
             </div>
@@ -80,7 +73,7 @@
                     <div class="spinner-ring"></div>
                     <div class="spinner-ring"></div>
                 </div>
-                <p class="loading-text">Processing your file...</p>
+                <p class="loading-text">Processing your premium file...</p>
             </div>
         </div>
 
@@ -113,19 +106,22 @@
             <!-- Top 3 Premium Podium -->
             <div class="podium-container">
                 <div class="podium-title">
-                    <h2 class="podium-header">Smart Study Classes</h2>
-                    <p class="podium-subtitle">Top Performers</p>
+                    <h2 class="podium-header">🏆 Top Performers 🏆</h2>
+                    <p class="podium-subtitle">Excellence Recognized</p>
                 </div>
                 <div class="podium glass-morphism" id="podium">
                     <!-- Podium positions will be populated by JavaScript -->
                 </div>
             </div>
 
-            <!-- Remaining Students -->
-            <div class="remaining-students" id="remainingStudents">
-                <h3 class="remaining-title">Elite Rankings</h3>
-                <div class="student-list" id="studentList">
-                    <!-- Student cards will be populated by JavaScript -->
+            <!-- Complete Leaderboard List -->
+            <div class="complete-leaderboard" id="completeLeaderboard">
+                <div class="complete-leaderboard-title">
+                    <h2 class="complete-header">📋 Complete Leaderboard Rankings 📋</h2>
+                    <p class="complete-subtitle">All Students - Ranked by Performance</p>
+                </div>
+                <div class="complete-student-list" id="completeStudentList">
+                    <!-- All student cards will be populated by JavaScript -->
                 </div>
             </div>
 
@@ -133,7 +129,7 @@
             <div class="download-section">
                 <button class="btn btn--premium btn--large download-btn" id="downloadBtn">
                     <i class="fas fa-camera"></i>
-                    <span>Capture Premium Screenshot</span>
+                    <span>Capture Screenshot</span>
                     <div class="btn-shine"></div>
                 </button>
             </div>
@@ -143,7 +139,7 @@
         <div class="demo-section">
             <button class="btn btn--outline demo-btn" id="demoBtn">
                 <i class="fas fa-play"></i>
-                <span>Try Premium Demo</span>
+                <span>Try Demo</span>
             </button>
         </div>
     </div>
