--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart Study Classes Toppers - Premium Leaderboard</title>
+    <title>Smart Study Classes Toppers - Leaderboard</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=Montserrat:wght@400;500;600;700;800&family=Source+Sans+Pro:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
@@ -27,8 +27,8 @@
                     </div>
                 </div>
                 <h1 class="header-title">SMART STUDY CLASSES</h1>
-                <h2 class="header-subtitle">Premium Student Leaderboard</h2>
-                <p class="header-description">Upload Excel file to generate beautiful premium leaderboard</p>
+                <h2 class="header-subtitle">Student Leaderboard</h2>
+                <p class="header-description">Upload Excel file to generate beautiful leaderboard</p>
             </div>
         </header>
 
@@ -36,10 +36,10 @@
         <section class="template-section">
             <div class="template-container glass-morphism">
                 <h3 class="template-title">📊 Excel Template</h3>
-                <p class="template-description">Download our premium template with updated column structure</p>
+                <p class="template-description">Download our template with updated column structure</p>
                 <button class="btn btn--premium template-download-btn" id="templateDownloadBtn">
                     <i class="fas fa-download"></i>
-                    <span>Download Premium Template</span>
+                    <span>Download Template</span>
                     <div class="btn-shine"></div>
                 </button>
             </div>
@@ -60,7 +60,7 @@
                         <input type="file" id="fileInput" class="file-input" accept=".xlsx,.xls" />
                         <button class="btn btn--premium upload-btn" onclick="document.getElementById('fileInput').click()">
                             <i class="fas fa-file-excel"></i>
-                            <span>Select Premium File</span>
+                            <span>Select File</span>
                             <div class="btn-shine"></div>
                         </button>
                     </div>
@@ -80,7 +80,7 @@
                     <div class="spinner-ring"></div>
                     <div class="spinner-ring"></div>
                 </div>
-                <p class="loading-text">Processing your premium file...</p>
+                <p class="loading-text">Processing your file...</p>
             </div>
         </div>
 
@@ -115,8 +115,8 @@
                 <!-- Top 3 Premium Podium -->
                 <div class="podium-container">
                     <div class="podium-title">
-                        <h2 class="podium-header">🏆 Premium Top Performers 🏆</h2>
-                        <p class="podium-subtitle">Excellence Recognized</p>
+                        <h2 class="podium-header">Smart Study Classes</h2>
+                        <p class="podium-subtitle">Top Performers </p>
                     </div>
                     <div class="podium glass-morphism" id="podium">
                         <!-- Podium positions will be populated by JavaScript -->
@@ -126,7 +126,7 @@
                 <!-- Complete Leaderboard List -->
                 <div class="complete-leaderboard" id="completeLeaderboard">
                     <div class="complete-leaderboard-title">
-                        <h2 class="complete-header">📋 Complete Leaderboard Rankings 📋</h2>
+                        <h2 class="complete-header">📋 Students Leaderboard Rankings 📋</h2>
                         <p class="complete-subtitle">All Students - Ranked by Performance</p>
                     </div>
                     <div class="complete-student-list" id="completeStudentList">
@@ -139,7 +139,7 @@
             <div class="download-section">
                 <button class="btn btn--premium btn--large download-btn" id="downloadBtn">
                     <i class="fas fa-camera"></i>
-                    <span>Capture Premium Screenshot</span>
+                    <span>Capture Screenshot</span>
                     <div class="btn-shine"></div>
                 </button>
             </div>
@@ -149,7 +149,7 @@
         <div class="demo-section">
             <button class="btn btn--outline demo-btn" id="demoBtn">
                 <i class="fas fa-play"></i>
-                <span>Try Premium Demo</span>
+                <span>Try Demo</span>
             </button>
         </div>
     </div>
